Overflow-hidden corrected

--- a/Website/app/globals.css
+++ b/Website/app/globals.css
@@ -60,3 +60,8 @@
     animation: none;
   }
 }
+
+  
+body{
+  overflow-x: hidden;
+}
